--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navbar {
+.nav-container {
     background-color: #444;
 }
 
@@ -7,6 +7,11 @@
     background-position: center;
     background-size: cover;
     color: #c2c2c2;
+}
+
+p {
+    color: #888;
+
 }
 
 .form {
